--- a/views/register.ejs
+++ b/views/register.ejs
@@ -11,6 +11,7 @@
     <%= slname %>
     <form action="/register" method="post">
         name: <input type="text" name="name" id="" required><br>
+        date of birth: <input type="date" name="dob" id="" required><br>
         date of death: <input type="date" name="dod" id="" required><br>
         cause of death: <input type="text" name="cod" id="" required><br>
         race: <select name="race" id="" required>
@@ -21,6 +22,7 @@
 
         Do you accept to be treated however we like and do everything we say forever and get banned at any point and maybe robbed too? <br><input type="checkbox" name="tos" id="" required> yes<br>
         <input type="text" name="uuid" id="" value="<%= uuid %>" hidden required>
+        <input type="text" name="joined" id="" value="<%- new Date() %>" hidden required>
         <input type="text" name="slname" id="" value="<%= slname %>" hidden required>
 <br>
         <input type="submit" value="Submit">
