--- a/views/spell-bar.ejs
+++ b/views/spell-bar.ejs
@@ -184,10 +184,10 @@
             </div>
             <div class="spell-container">
                 <% if(parseInt(user.cooldown) <= 0){  user.cooldown = ''; } %>
-                <div class="spell" id="spell-1"><span class="cooldown"><%= user.cooldown %></span><img src="https://cdn.discordapp.com/attachments/917599626490687538/918169498450796544/Brain_Fog_sm.png" alt=""></div>
-                <div class="spell" id="spell-2"><span class="cooldown"><%= user.cooldown %></span><img src="https://cdn.discordapp.com/attachments/917599626490687538/918162174290051083/Degauss_sm.png" alt=""></div>
-                <div class="spell" id="spell-3"><span class="cooldown"><%= user.cooldown %></span><img src="https://cdn.discordapp.com/attachments/917599626490687538/918157604151255110/Cold_Spot_sm.png" alt=""></div>
-                <div class="spell" id="spell-4"><span class="cooldown"><%= user.cooldown %></span><img src="https://cdn.discordapp.com/attachments/917599626490687538/918147448256466974/Shattered_Mirror_sm.png" alt=""></div>
+                <div class="spell" id="spell-1"><span id="cooldown-1" class="cooldown"><%= user.cooldown %></span><img src="https://cdn.discordapp.com/attachments/917599626490687538/918169498450796544/Brain_Fog_sm.png" alt=""></div>
+                <div class="spell" id="spell-2"><span id="cooldown-2" class="cooldown"><%= user.cooldown %></span><img src="https://cdn.discordapp.com/attachments/917599626490687538/918162174290051083/Degauss_sm.png" alt=""></div>
+                <div class="spell" id="spell-3"><span id="cooldown-3" class="cooldown"><%= user.cooldown %></span><img src="https://cdn.discordapp.com/attachments/917599626490687538/918157604151255110/Cold_Spot_sm.png" alt=""></div>
+                <div class="spell" id="spell-4"><span id="cooldown-4" class="cooldown"><%= user.cooldown %></span><img src="https://cdn.discordapp.com/attachments/917599626490687538/918147448256466974/Shattered_Mirror_sm.png" alt=""></div>
                 <div class="spell" id="spell-5"></div>
             </div>
             
