--- a/views/spell-bar.ejs
+++ b/views/spell-bar.ejs
@@ -9,6 +9,7 @@
     <script defer src="/spellbar.js"></script>
 </head>
 <body>
+    <div id="uuid-data" data-test=<%= user.uuid %>></div>
     <style>
         body, html{
             margin: 0;
