--- a/views/spell-bar.ejs
+++ b/views/spell-bar.ejs
@@ -184,6 +184,7 @@
             margin-left: -0.2vw;
             text-align: center;
             width: 10vw;
+            z-index: 3;
         }
         .spell {
             position: relative;
