--- a/views/spell-bar.ejs
+++ b/views/spell-bar.ejs
@@ -177,7 +177,7 @@
             width: 100%;
             height: 100%;
         }
-        .cooldown{
+        .combat.cooldown{
             position: absolute;
             color: white;
             font-size: 8vw;
@@ -228,7 +228,7 @@
             </div>
         </div>
         <div class="right-align">
-            <div class="text-info"><span>Pandora's Toy Box, AFTERGLOW</span>  <span id="target" style="float: right;">Targeting: <%= user.target %></span></div>
+            <div class="text-info"><span>Pandora's Toy Box, AFTERGLOW</span>  <span id="target" style="float: right;">Targeting: <%= user.combat.target %></span></div>
             <div class="second-container">
                 <div class="left-align2">
                     <div class="ecto-bar" id="ecto-bar" style="width: <%= (user.ecto/user.ecto_max * 100) %>%;">
@@ -244,7 +244,13 @@
                 </div>
             </div>
             <div class="spell-container">
-                <% if(parseInt(user.cooldown) <= 0){  user.cooldown = ''; } %>
+                <%  user.combat.cooldown = {
+                    1: 0,
+                    2: 0,
+                    3: 0,
+                    4: 0,
+                    5: 0
+                }; %>
                 <% let spell_images = {
                     one: '',
                     two: '',
@@ -257,22 +263,22 @@
                     if(user.skills[key].assigned == 3) spell_images.three = user.skills[key].image
                     if(user.skills[key].assigned == 4) spell_images.four = user.skills[key].image
                 } %>
-                <div class="spell" id="spell-1"><span id="cooldown-1" class="cooldown"><%= user.cooldown %></span>
+                <div class="spell" id="spell-1"><span id="cooldown-1" class="cooldown"><%= user.combat.cooldown['1'] %></span>
                     <div class="item-image-effects">
                         <img class="item-image" src="https://i.pinimg.com/originals/17/0b/55/170b55f5d7238e5e3ff41436ce3091d4.gif" alt="">
                       </div>
                     <% if(spell_images.one != ''){ %><img class="ontop" src="<%= spell_images.one %>" alt=""><%}%></div>
-                <div class="spell" id="spell-2"><span id="cooldown-2" class="cooldown"><%= user.cooldown %></span>
+                <div class="spell" id="spell-2"><span id="cooldown-2" class="cooldown"><%= user.combat.cooldown['2'] %></span>
                     <div class="item-image-effects">
                         <img class="item-image" src="https://i.pinimg.com/originals/17/0b/55/170b55f5d7238e5e3ff41436ce3091d4.gif" alt="">
                       </div>
                     <% if(spell_images.two != ''){ %><img class="ontop" src="<%= spell_images.two %>" alt=""><%}%></div>
-                <div class="spell" id="spell-3"><span id="cooldown-3" class="cooldown"><%= user.cooldown %></span>
+                <div class="spell" id="spell-3"><span id="cooldown-3" class="cooldown"><%= user.combat.cooldown['3'] %></span>
                     <div class="item-image-effects">
                         <img class="item-image" src="https://i.pinimg.com/originals/17/0b/55/170b55f5d7238e5e3ff41436ce3091d4.gif" alt="">
                       </div>
                     <% if(spell_images.three != ''){ %><img class="ontop" src="<%= spell_images.three %>" alt=""><%}%></div>
-                <div class="spell" id="spell-4"><span id="cooldown-4" class="cooldown"><%= user.cooldown %></span>
+                <div class="spell" id="spell-4"><span id="cooldown-4" class="cooldown"><%= user.combat.cooldown['4'] %></span>
                     <div class="item-image-effects">
                         <img class="item-image" src="https://i.pinimg.com/originals/17/0b/55/170b55f5d7238e5e3ff41436ce3091d4.gif" alt="">
                       </div>
