--- a/views/spell-bar.ejs
+++ b/views/spell-bar.ejs
@@ -177,7 +177,7 @@
             width: 100%;
             height: 100%;
         }
-        .combat.cooldown{
+        .cooldown{
             position: absolute;
             color: white;
             font-size: 8vw;
