--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -10,7 +10,7 @@
     <style>
         @font-face {
   font-family:"TypewriterRegular";
-  src: url("/TypewriterRegular.ttf") format("truetype");
+  src: url("/font/TypewriterRegular.ttf") format("truetype");
         }
   body{
     font-family: TypewriterRegular;
