--- a/views/spell_creator.ejs
+++ b/views/spell_creator.ejs
@@ -26,6 +26,7 @@
         type: <select name="type" id=""  value="attack">
             <option value="attack">attack</option>
             <option value="buff">buff</option>
+            <option value="developer">developer</option>
             <option value="other">other</option>
         </select><br>
         target: <select name="target" id=""  value="either">
